--- a/client/client/tsconfig.json
+++ b/client/client/tsconfig.json
@@ -5,7 +5,7 @@
     "removeComments": false,
     "sourceMap": false,
     "target": "es6",
-    "outDir": "../../server/routes",
+    "outDir": "../../server/routes/public",
     "strict": true,
 
     "alwaysStrict": true,
